service-mesh/disable-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-disable
  namespace: service-mesh-demo
spec:
  mtls:
  mode: DISABLE
