service-mesh/mtls-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-strict
  namespace: service-mesh-demo
spec:
  mtls:
    mode: STRICT
