service-mesh/permissive-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-permissive
  namespace: service-mesh-demo
spec:
  mtls:
    mode: PERMISSIVE
